java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateLocalVariable6.pass
package org.netbeans.test.java.hints;

public abstract class CreateLocalVariable6 {
    
    /** Creates a new instance of AbstractClass */
    public CreateLocalVariable6() {
        
        String foo;if (foo != null) {
            foo = "bar";
        }
    }
    
}
